# fieldglass

./: .gitignore  Cargo.toml  LICENSE  PLAN.md  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/fieldglass-companion/: Cargo.toml
crates/fieldglass-companion/capabilities/: companion-window.json  preview-window.json
crates/fieldglass-companion/src/: lib.rs  main.rs  tray.rs
crates/fieldglass-companion/src/commands/: cache.rs  location.rs  mod.rs  photos.rs  settings.rs  taxa.rs
crates/fieldglass-core/: Cargo.toml
crates/fieldglass-core/src/: lib.rs  types.rs
crates/fieldglass-core/src/api/: observations.rs
crates/fieldglass-core/src/cache/: manager.rs
crates/fieldglass-core/src/config/: settings.rs
crates/fieldglass-core/src/selection/: mod.rs
crates/fieldglass-scr-windows/: Cargo.toml
crates/fieldglass-scr-windows/src/: config.rs  fullscreen.rs  main.rs  preview.rs
crates/inat-companion/: Cargo.toml  tauri.conf.json
crates/inat-companion/src/: lib.rs  main.rs
crates/inat-companion/src/commands/: cache.rs  location.rs  photos.rs  settings.rs  taxa.rs
crates/inat-core/: Cargo.toml
crates/inat-core/src/: lib.rs  types.rs
crates/inat-core/src/api/: client.rs  geocoding.rs  mod.rs  taxa.rs
crates/inat-core/src/cache/: manager.rs  metadata.rs  mod.rs  storage.rs
crates/inat-core/src/config/: mod.rs  settings.rs
crates/inat-core/src/selection/: diversity.rs  filter.rs
crates/inat-scr-windows/: Cargo.toml
crates/inat-scr-windows/src/: config.rs  fullscreen.rs  main.rs  preview.rs
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: CacheStatus.tsx  ContentFilters.tsx  DisplaySettings.tsx  LocationSettings.tsx  TaxaPicker.tsx
frontend/src/lib/: commands.ts
frontend/src/pages/: About.tsx  Preview.tsx  Settings.tsx
frontend/src/types/: models.ts
installer/windows/: License.rtf  Product.wxs
scripts/windows/: build-companion.ps1  build-installer.ps1  build-screensaver.ps1  install-screensaver.ps1  uninstall-screensaver.ps1
slideshow/: index.html  slideshow.css  slideshow.js
