[package]
name = "inat-core"
description = "Shared core library for Field Glass — API client, cache, selection, metadata"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "inat_core"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
rusqlite = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
directories = { workspace = true }
governor = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3"
